feat: add result, api and service with test
